lang2/macro/tests/ui/fail/20-unknown-method-marker.stderr
error: unknown ink! marker
  --> $DIR/20-unknown-method-marker.rs:17:14
   |
17 |         #[ink(unknown_marker)]
   |              ^^^^^^^^^^^^^^^^
